# protocol-v2

./: .gitignore  .prettierignore  ARCHITECTURE.md  Anchor.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  package.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: claude-security-guidance.md
.husky/: pre-commit
cli-admin/: README.md  package.json  tsconfig.json
deploy-scripts/: .env.example  README.md  _lib.sh  build-devnet.sh  deploy-devnet.sh  deploy-from-buffer-devnet.sh  init-devnet.sh  init-devnet.ts  wipe-devnet.ts  write-buffer-devnet.sh
docs/: alignment-and-native-offsets.md
learning/: learning_state.md  master_map.md
programs/drift/: Cargo.toml
programs/drift/src/: auth.rs  error.rs  ids.rs  lib.rs  macros.rs  sdk.rs  test_utils.rs
programs/drift/src/controller/: amm.rs  funding.rs  insurance.rs  isolated_position.rs  liquidation.rs  mod.rs  orders.rs  pda.rs  pnl.rs  position.rs  repeg.rs  spot_balance.rs  spot_position.rs  token.rs
programs/drift/src/controller/amm/: tests.rs
programs/drift/src/controller/isolated_position/: tests.rs
programs/drift/src/controller/liquidation/: tests.rs
programs/drift/src/controller/orders/: amm_jit_tests.rs  fuel_tests.rs  tests.rs
programs/drift/src/controller/pnl/: delisting.rs  tests.rs
programs/drift/src/controller/position/: tests.rs
programs/drift/src/controller/spot_balance/: tests.rs
programs/drift/src/instructions/: admin.rs  constraints.rs  if_staker.rs  keeper.rs  lp_admin.rs  lp_pool.rs  mod.rs  optional_accounts.rs  pyth_lazer_oracle.rs  user.rs
programs/drift/src/math/: amm.rs  amm_spread.rs  auction.rs  casting.rs  constants.rs  cp_curve.rs  fees.rs  fulfillment.rs  margin.rs  mod.rs  oracle.rs  orders.rs  position.rs  spot_swap.rs
programs/drift/src/math/amm_spread/: tests.rs
programs/drift/src/math/auction/: tests.rs
programs/drift/src/math/cp_curve/: tests.rs
programs/drift/src/math/fees/: tests.rs
programs/drift/src/math/fulfillment/: tests.rs
programs/drift/src/math/funding/: tests.rs
programs/drift/src/math/liquidation/: tests.rs
programs/drift/src/math/margin/: tests.rs
programs/drift/src/math/orders/: tests.rs
programs/drift/src/math/repeg/: tests.rs
programs/drift/src/state/: admin_authority_config.rs  amm_cache.rs  constituent_map.rs  events.rs  fill_mode.rs  fulfillment.rs  lp_pool.rs  margin_calculation.rs  market_status.rs  mod.rs  oracle.rs  oracle_map.rs  order_params.rs  perp_market.rs  perp_market_map.rs  revenue_share.rs  revenue_share_map.rs  settle_pnl_mode.rs  signed_msg_user.rs  spot_market.rs  spot_market_map.rs  state.rs  user.rs  user_map.rs
programs/drift/src/state/fill_mode/: tests.rs
programs/drift/src/state/fulfillment_params/: mod.rs  phoenix.rs  serum.rs
programs/drift/src/state/oracle/: tests.rs
programs/drift/src/state/order_params/: tests.rs
programs/drift/src/state/perp_market/: tests.rs
programs/drift/src/state/signed_msg_user/: tests.rs
programs/drift/src/state/traits/: tests.rs
programs/drift/src/state/user/: isolated_transfer_tests.rs  tests.rs
programs/drift/src/validation/: margin.rs  mod.rs  order.rs  perp_market.rs  sig_verification.rs
programs/openbook_v2/: Cargo.toml
programs/openbook_v2/src/: account.rs  lib.rs
programs/pyth/: Cargo.toml
programs/pyth/src/: lib.rs
sdk/: .prettierignore  README.md  VERSION  package.json
test-scripts/: run-anchor-tests.sh
tests/: admin.ts  adminDeposit.ts  adminWithdrawFromInsuranceFundVault.ts  builderCodes.ts  decodeUser.ts  delistMarket.ts  driftClient.ts  fuelSweep.ts  isolatedPositionLiquidatePerp.ts  isolatedPositionLiquidatePerpwithFill.ts  isolatedTransferMarginChecks.ts  liquidatePerp.ts  liquidatePerpPnlForDeposit.ts  liquidatePerpWithFill.ts  lpPool.ts  lpPoolSwap.ts  openbookTest.ts  oracleDiffSources.ts  orderMarginChecks.ts  overwritePerpAccounts.ts  placeAndMakeSignedMsgBankrun.ts  pyth.ts  referencePriceOffset.ts  scaleOrders.ts  specialUserAccount.ts  spotSwap.ts  spotSwap22.ts  surgePricing.ts  switchOracle.ts  testHelpers.ts  tokenFaucet.ts  userAccount.ts
(+197 files in other folders)
