[workspace]
members = [
	"programs/drift",
	"programs/openbook_v2",
	"programs/pyth",
	"programs/pyth-lazer",
	"programs/token_faucet",
]
exclude = [
	"deps/serum-dex"
]
resolver = "2"

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
