[package]
name = "drift"
version = "2.162.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "drift"
path = "src/lib.rs"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
mainnet-beta = []
anchor-test = []
anchor-debug = []
default = ["mainnet-beta", "no-entrypoint"]
drift-rs = []
idl-build = [
  "anchor-lang/idl-build",
  "anchor-spl/idl-build",
  "openbook-v2-light/idl-build",
]

[dependencies]
anchor-lang = "1.0.0"
anchor-spl = "1.0.0"
solana-program = "3"
borsh = "1"
pyth-client = "0.2.2"
pyth_lazer = { path = "../pyth-lazer", features = ["no-entrypoint"] }
bytemuck = { version = "1.4.0" }
hex = "0.4.3"
num-traits = "0.2"
uint = { version = "0.9.1", default-features = false }
num-integer = "0.1.44"
arrayref = "0.3.6"
base64 = "0.13.0"
serum_dex = { git = "https://github.com/drift-labs/serum-dex", branch = "master", features = ["no-entrypoint"] }
enumflags2 = "0.6.4"
phoenix-v1 = { git = "https://github.com/drift-labs/phoenix-v1", rev = "fcf37149707a300cf42bfd5106bb675de53c8962", features = ["no-entrypoint"] }
solana-security-txt = "1.1.0"
static_assertions = "1.1.0"
drift-macros = { git = "https://github.com/drift-labs/drift-macros.git", rev = "c57d87" }
openbook-v2-light = { path = "../openbook_v2", features = ["no-entrypoint"] }
byteorder = "1.4.3"

[dev-dependencies]
bytes = "1.2.0"
pyth = { path = "../pyth", features = ["no-entrypoint"]}
base64 = "0.13.0"
