[package]
name = "openbook-v2-light"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "lib"]
name = "openbook_v2_light"
path = "src/lib.rs"

[features]
default = ["cpi"]
no-entrypoint = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.0", features = ["derive"] }
borsh = { version = "1", features = ["unstable__schema", "derive"] }
bytemuck = {  version = "1.4.0" , features = ["derive",  "min_const_generics"]}